# Mousedroid

server/: CMakeLists.txt
server/include/: Taskbar.hpp  adb.hpp
server/src/: SettingsManager.cpp  Taskbar.cpp  wxApplication.cpp
server/src/net/: Server.cpp
